# E2E-live-data-ml-system

./: .gitignore  .pre-commit-config.yaml  README.md
docker-compose/: Makefile  elasticsearch.yaml  news-signal-historical.yml  news-signal-live.yml  technical-indicators-historical.yml  technical-indicators-live.yaml  technical-indicators-live.yml  technical-indicators-pipeline.yml
services/candles/: Makefile  README.md  config.py  pyproject.toml  run.py  run_test.py
services/news/: Makefile  README.md  config.py  pyproject.toml  run.py
services/news-signal/: Makefile  Modelfile  README.md  config.py  pyproject.toml  run.py
services/news-signal/finetune_src/: config_tokens.py  fine_tuning.py  golden_dataset.py
services/news-signal/llms/: base.py  claude.py  factory.py  ollama.py  ollama_predict.py
services/prediction-api/: Cargo.toml
services/price-predictor/: README.md  config.py  inference.py  price_predictor_pair_BTC_USD_candle_seconds_60_prediction_seconds_300.joblib  pyproject.toml  run.py  training.py
services/price-predictor/src/: feature_reader.py  price_predictor.py
services/price-predictor/src/models/: dummy_model.py
services/price-predictor/src/training/: training.py
services/price-predictor/training/: training.py
services/technical-indicators/: Makefile  README.md  pyproject.toml  run.py
services/to-feature-store/: Makefile  README.md  config.py  pyproject.toml  run.py  sink.py
services/trades/: .gitignore  Makefile  README.md  config.py  multi.Dockerfile  naive.Dockerfile  opt.Dockerfile  run.py
(+11 files in other folders)
