[project]
name = "news-signal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index-llms-anthropic>=0.6.1",
    "llama-index>=0.12.5",
    "loguru>=0.7.3",
    "pydantic-settings>=2.6.1",
    "quixstreams>=3.4.0",
    "llama-index-llms-ollama>=0.5.0",
    "fire>=0.7.0",
    "comet-ml>=3.47.6",
    "unsloth>=2025.1.6",
]
